# waveform-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  kissfft_wrapper.cpp  kissfft_wrapper.hpp  main.cpp  sdl_audio_device.cpp  sdl_audio_device.hpp  waveform_player.cpp  waveform_player.hpp
